2008-07-27  Alan Modra  <amodra@bigpond.net.au>

	* elf.c (_bfd_elf_make_section_from_shdr): Ignore return from
	elf_parse_notes.  Use bfd_malloc_and_get_section.
	(elf_parse_notes): Validate note namesz and descsz.

2008-07-26  Michael Eager <eager@eagercon.com>

	* elf32-ppc.c (ppc_elf_merge_obj_attributes): Check compatibility
	between single-float, double-float, and soft-float.

2008-07-24  Daniel Jacobowitz  <dan@codesourcery.com>

	* elf32-mips.c (elf_backend_write_section): Define.

2008-07-24  Nick Clifton  <nickc@redhat.com>

	* elf.c (_bfd_elf_map_sections_to_segments): Catch off by one
	error assigning sections to segments.

2008-07-22  Nick Clifton  <nickc@redhat.com>

	* elf.c (_bfd_elf_map_sections_to_segments): Allow sections in
	adjoining pages to be included in the same segment.

2008-07-22  Simon Baldwin  <simonb@google.com>

	* elflink.c (elf_link_output_extsym): Set st_size to zero for
	symbols from dynamic libraries.

2008-07-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/4424
	* elflink.c (_bfd_elf_merge_symbol): Call bed->relocs_compatible
	to check if 2 inputs are compatible.

2008-07-21  Sterling Augustine  <sterling@tensilica.com>

	* elf.c (assign_file_positions_for_load_sections): Print vma in
	error message about overlapping section vmas.

2008-07-21  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/6747
	* elf32-frv.c (elf32_frv_relocate_section): Revert the change
	for PR ld/6446 checked in by accident on May 21, 2008.

2008-07-21  Nick Clifton  <nickc@redhat.com>

	* coff-sh.c (bfd_pe_print_pdata): Define to NULL for non
	COFF_WITH_PE based SH ports.
	* libpei.h (_bfd_XX_print_ce_compressed_pdata): Prototype.
	* arm-wince-pe.c (bfd_pe_print_pdata): Use
	_bfd_pe_print_ce_compressed_pdata.
	(slurp_symcache, cleanup_syms, pe_print_ce_compressed_pdata): Move
	to...
	* peXXigen.c: ... here and rename pe_print_ce_compressed_pdata to
	_bfd_XX_print_ce_compressed_pdata.

2008-07-21  Alan Modra  <amodra@bigpond.net.au>
